--- a/main.html
+++ b/main.html
@@ -8,8 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<ol>
+	<li data-ns-test="shoppingList">book1</li>
+	<li data-ns-test="shoppingList">book2</li>
+	<li data-ns-test="shoppingList">book3</li>
+</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">delhi</li>
+		<li data-ns-test="holidayList">pune</li>
+		<li data-ns-test="holidayList">banglore</li>
+	</ul>
+
+	
     <script type="text/javascript" src="./script.js">
-</script>
+	</script>
 
 </body>
 
